Initial route setup

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,6 @@
 extend layout
+block moreLinks
+  a(href='http://www.emberware.com') The best place
 block content
   p
     | This is it. This is the website you've all been waiting for.
