about page version 2

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,5 +1,8 @@
 extend layout
+block moreLinks
+	a(href="/") Home
 block content
 	p
 		| This is a prototype for Pork. A totally rad and happening 
 		| place where you can help and give help to your fellow students
+	
