--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,21 @@
 extend layout
 block content
+  h1 Pork!
   p
-    | This is it. This is the website you've all been waiting for.
+    | Welcome to 
+    strong Pork! 
+    | It's a cool way to learn from other University of Arkansas students. Learn more at our 
+    a(href='/about') about
+    |  page.
+  form.login
+    h3 Login
+    input(type='text', id='l_username', placeholder='Username')
+    br
+    input(type='password', id='l_password', placeholder='Password')
+  form.create
+    h3 Create
+    input(type='text', id='c_username', placeholder='Username')
+    br
+    input(type='password', id='c_password', placeholder='Password')
+    br
+    input(type='password', id='c_confirm_password', placeholder='Confirm Password')
