-Added the fucking buttons.

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,8 @@ block content
     input(type='text', id='l_username', placeholder='Username')
     br
     input(type='password', id='l_password', placeholder='Password')
+    br
+    input(type='submit')
   form.create
     h3 Create
     input(type='text', id='c_username', placeholder='Username')
@@ -21,3 +23,5 @@ block content
     input(type='password', id='c_password', placeholder='Password')
     br
     input(type='password', id='c_confirm_password', placeholder='Confirm Password')
+    br
+    input(type='submit')
