--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 extend layout
 block moreLinks
-  a(href='http://www.emberware.com') The best place
+  a(href='/signup') Do the signup
 block content
   h1 Pork!
   p
@@ -16,12 +16,4 @@ block content
     input(type='password', id='l_password', placeholder='Password')
     br
     input(type='submit')
-  form.create
-    h3 Create
-    input(type='text', id='c_username', placeholder='Username')
-    br
-    input(type='password', id='c_password', placeholder='Password')
-    br
-    input(type='password', id='c_confirm_password', placeholder='Confirm Password')
-    br
-    input(type='submit')
+
