--- a/views/signup.jade
+++ b/views/signup.jade
@@ -5,12 +5,12 @@ block content
 		| Thank you for signing up for  
 		strong Pork!
 	
-	form.create
+	form.create(method='post')
 		h3 Create
-		input(type='text', id='c_username', placeholder='Username')
+		input(type='text', name='name', placeholder='Username')
 		br
-		input(type='password', id='c_password', placeholder='Password')
+		input(type='password', name='pass', placeholder='Password')
 		br
-		input(type='password', id='c_confirm_password', placeholder='Confirm Password')
+		input(type='password', name='c_confirm_password', placeholder='Confirm Password')
 		br
 		input(type='submit')
