-Finalized some layout stuff.

--- a/views/about.jade
+++ b/views/about.jade
@@ -1,8 +1,13 @@
 extend layout
 block moreLinks
 	a(href="/") Home
-block content
+block message
 	p
-		| This is a prototype for Pork. A totally rad and happening 
-		| place where you can help and give help to your fellow students
+		strong Pork!
+		|  is pretty rad.
+block content
+	.span-12
+		p
+			| This is a prototype for Pork. A totally rad and happening 
+			| place where you can help and give help to your fellow students
 	
