--- a/views/help.jade
+++ b/views/help.jade
@@ -1,5 +1,9 @@
 extend layout
 block moreLinks
 	a(href='/') Home
+block message
+	p
+		| Don't worry, it's not really that hard!
 block content
-	p How have you already gotten lost?
+	.span-12
+		p How have you already gotten lost?
