--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,19 +1,18 @@
 extend layout
+block message
+	p
+		| Hello #{name}! Learn some shit!
 block content
-  h1 Pork!
-  h4 Hello #{name}! Learn some shit!
-  .landing_container.span-12
-    .landing_profile.span-2
-      h2 Profile
-      p
-        | Username: 
-        strong #{name}
-        br
-        | Member Since: 
-        strong uh
-    .active_sessions.span-7
-      h2 Active Sessions
-    .new_session.span-3.last
-      h2 New Session
-      strong Create New Session
-  
+	.landing_box.span-2
+		h2 Profile
+		p
+			| Username: 
+			strong #{name}
+			br
+			| Member Since: 
+			strong uh
+	.landing_box.span-7
+		h2 Active Sessions
+	.landing_box.span-3.last
+		h2 New Session
+		strong Create New Session
