--- a/public/css/pork.css
+++ b/public/css/pork.css
@@ -1,12 +1,11 @@
 body {
-  font-family: sans-serif;
+	font-family: sans-serif;
 }
 
-.landing_profile {
+.message {
+	vertical-align: bottom;
 }
 
-.active_sessions {
-}
-
-.new_session {
+.landing_box {
+	background-color: #E6AFAC;
 }
