--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,16 +1,16 @@
 extend layout
-block content
-	h1 Pork!
+block message
 	p
-		| Thank you for signing up for  
+		| Thank you for signing up for 
 		strong Pork!
-	
-	form.create
+block content
+	.span-12
 		h3 Create
-		input(type='text', id='c_username', placeholder='Username')
-		br
-		input(type='password', id='c_password', placeholder='Password')
-		br
-		input(type='password', id='c_confirm_password', placeholder='Confirm Password')
-		br
-		input(type='submit')
+		form.create
+			input(type='text', id='c_username', placeholder='Username')
+			br
+			input(type='password', id='c_password', placeholder='Password')
+			br
+			input(type='password', id='c_confirm_password', placeholder='Confirm Password')
+			br
+			input(type='submit')
