--- a/views/about.jade
+++ b/views/about.jade
@@ -6,7 +6,7 @@ block message
 		strong Pork!
 		|  is pretty rad.
 block content
-	.span-12
+	.span-10.last.prepend-1
 		p
 			| This is a prototype for Pork. A totally rad and happening 
 			| place where you can help and give help to your fellow students
