--- a/views/help.jade
+++ b/views/help.jade
@@ -5,5 +5,5 @@ block message
 	p
 		| Don't worry, it's not really that hard!
 block content
-	.span-12
+	.span-10.last.prepend-1
 		p How have you already gotten lost?
