--- a/views/landing.jade
+++ b/views/landing.jade
@@ -3,7 +3,7 @@ block message
 	p
 		| Hello #{name}! Learn some shit!
 block content
-	.landing_box.span-2
+	.content_box.span-2.prepend-1
 		h2 Profile
 		p
 			| Username: 
@@ -11,8 +11,8 @@ block content
 			br
 			| Member Since: 
 			strong uh
-	.landing_box.span-7
+	.content_box.span-5
 		h2 Active Sessions
-	.landing_box.span-3.last
+	.content_box.span-3.last
 		h2 New Session
 		strong Create New Session
