--- a/views/signup.jade
+++ b/views/signup.jade
@@ -4,7 +4,7 @@ block message
 		| Thank you for signing up for 
 		strong Pork!
 block content
-	.span-12
+	.span-10.last.prepend-1
 		h3 Create
 		form.create
 			input(type='text', id='c_username', placeholder='Username')
