-Changed subtle thing.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,4 +19,4 @@ html
 			.span-10.last.prepend-1
 				br
 				hr.space
-				p Running on node with Express, Jade and Stylus
+				p Running on node with Express, Jade and Love
