--- a/views/index.jade
+++ b/views/index.jade
@@ -13,10 +13,10 @@ block content
 	script(src='/js/account_create.js')
 	.span-12
 		h3 Login
-		form.login
-			input(type='text', id='l_username', placeholder='Username')
+		form.login(method='post')
+			input(type='text', name='name', id='l_username', placeholder='Username')
 			br
-			input(type='password', id='l_password', placeholder='Password')
+			input(type='password', name='pass', id='l_password', placeholder='Password')
 			br
 			input(type='submit', id='l_submit')
 
