-Tons more layout stuff.
-Started session.

--- a/views/about.jade
+++ b/views/about.jade
@@ -2,11 +2,11 @@ extend layout
 block moreLinks
 	a(href="/") Home
 block message
-	p
+	span
 		strong Pork!
 		|  is pretty rad.
 block content
-	.span-10.last.prepend-1
+	.span-10.last.prepend-1.content_box.middle_box
 		p
 			| This is a prototype for Pork. A totally rad and happening 
 			| place where you can help and give help to your fellow students
