--- a/public/css/pork.css
+++ b/public/css/pork.css
@@ -11,10 +11,6 @@ a {
 	text-decoration: none;
 }
 
-.message {
-	vertical-align: bottom;
-}
-
 .container {
 	background-color: #F2EAE9;
 }
@@ -24,6 +20,41 @@ a {
 	background-clip: content-box;
 }
 
+.middle_box {
+	min-height: 400px;
+}
+
+.header_box {
+	min-height: 60px;
+}
+
 hr.space {
 	width: 0px;
+}
+
+/*Session*/
+.chat_area {
+	height: 370px;
+}
+
+.controls_area {
+	height: 30px;
+}
+
+.controls_instructions {
+	display: inline-block;
+	margin: 0px;
+	width: 15%;
+}
+
+.controls_textbox {
+	width: 70%;
+	margin: 0px;
+	padding: 0px;
+}
+
+.controls_send {
+	width: 12%;
+	margin: 0px;
+	padding: 0px;
 }
