--- a/views/help.jade
+++ b/views/help.jade
@@ -2,8 +2,8 @@ extend layout
 block moreLinks
 	a(href='/') Home
 block message
-	p
+	span
 		| Don't worry, it's not really that hard!
 block content
-	.span-10.last.prepend-1
+	.span-10.last.prepend-1.content_box.middle_box
 		p How have you already gotten lost?
