--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,9 +1,8 @@
 extend layout
 block message
-	p
-		| Hello #{name}! Learn some shit!
+	span Hello #{name}! Learn some shit!
 block content
-	.content_box.span-2.prepend-1
+	.content_box.span-2.prepend-1.middle_box
 		h2 Profile
 		p
 			| Username: 
@@ -11,8 +10,8 @@ block content
 			br
 			| Member Since: 
 			strong uh
-	.content_box.span-5
+	.content_box.span-5.middle_box
 		h2 Active Sessions
-	.content_box.span-3.last
+	.content_box.span-3.last.middle_box
 		h2 New Session
 		strong Create New Session
