-More session stuff. STILL NOT WORKING ENTIRELY.

--- a/views/session.jade
+++ b/views/session.jade
@@ -15,7 +15,7 @@ block content
 		h2 "Porkie:"
 		p
 			| Username: 
-			strong #{partnerUsername}
+			strong #{convo.user2}
 			br
 			| Member Since: 
 			strong uh
