added settings functionallity

--- a/views/landing.jade
+++ b/views/landing.jade
@@ -1,7 +1,9 @@
 extend layout
+block moreLinks
+	a(href='/settings/#{name}') Settings
 block message
 	p
-		| Hello #{name}! Learn some shit!
+		| Hello #{name}! Learn something you little shit!
 block content
 	.content_box.span-2.prepend-1
 		h2 Profile
