--- a/views/session.jade
+++ b/views/session.jade
@@ -1,6 +1,6 @@
 extends layout
 block message
-	span Currently talking about #{topic}
+	span Currently talking about #{convo.topic}
 block content
 	.span-8.prepend-1.content_box.middle_box
 		h2 Session
@@ -12,10 +12,8 @@ block content
 				input(type="text", id="s_enter_text").controls_textbox
 				input(type="submit", id="s_send", value="Send").controls_send
 	.span-2.last.content_box.middle_box
-		h2 "Porkie:"
+		h2 Users:
 		p
-			| Username: 
-			strong #{convo.user2}
-			br
-			| Member Since: 
-			strong uh
+			- for (var u = 0; u < convo.users.length; u++)
+				strong #{convo.users[u]}
+				br
