--- a/views/session.jade
+++ b/views/session.jade
@@ -5,11 +5,13 @@ block content
 	.span-8.prepend-1.content_box.middle_box
 		h2 Session
 		.chat_area(id="s_chat")
-			//Nothing initially
+			-each message in convo.messages
+				p.uname #{message[0]} #{message[1]}
+				br
 		.controls_area
-			form(id="s_controls")
+			form(id="s_controls", method="post")
 				span.controls_instructions Talk in here: 
-				input(type="text", id="s_enter_text").controls_textbox
+				input(type="text", id="s_enter_text", name="addToConvo").controls_textbox
 				input(type="submit", id="s_send", value="Send").controls_send
 	.span-2.last.content_box.middle_box
 		h2 Users:
