First cross-computer conversation

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,6 +21,9 @@ html
 				span  
 				if (name != null)
 					a(href='/logout') Logout
+					span
+				else
+					a(href='/landing/#{name}')
 					span  
 				block moreLinks
 			hr.space
