--- a/views/landing.jade
+++ b/views/landing.jade
@@ -12,8 +12,12 @@ block content
 			br
 			| Member Since: 
 			strong uh
+			
 	.content_box.span-5.middle_box
-		h2 Active Sessions
+		h2 Active Conversations
+		-each message in user.activeSessions
+			a(href='/session/#{message[0]}') #{message[1]} #{message[2]}
+			br			
 	.content_box.span-3.last.middle_box
 		h2 New Session
 		form(action='/session', method='post')
