--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
 					a(href='/logout') Logout
 					span
 				else
-					a(href='/landing/#{name}')
+					a(href='/landing/#{name}') Landing
 					span  
 				block moreLinks
 			hr.space
