--- a/views/session.jade
+++ b/views/session.jade
@@ -1,6 +1,7 @@
 extends layout
 block message
 	span Currently talking about #{convo.topic}
+	a(href='/landing/#{name}') Back to Landing
 block content
 	.span-8.prepend-1.content_box.middle_box
 		h2 Session
