--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 extend layout
 block moreLinks
 	if(name == null)
-		a(href='/signup') Do the signup
+		a(href='/signup') Sign Up
+		span  
 block message
 	span
 		| Welcome to 
