-Added some leet content.

--- a/views/about.jade
+++ b/views/about.jade
@@ -6,6 +6,12 @@ block message
 block content
 	.span-10.last.prepend-1.content_box.middle_box
 		p
-			| This is a prototype for Pork. A totally rad and happening 
-			| place where you can help and give help to your fellow students
-	
+			| This is a prototype for 
+			strong Pork!
+			|  It's a:
+		ul
+			li Learning Platform
+			li Colaboration Tool
+			li Social Network
+		hr.space
+		Made by Armon, Daniel, and Riley.
